@@ -13,7 +13,7 @@
 #include <q3listbox.h>
 #include <q3listview.h>
 #include <q3multilineedit.h>
-#include <Q3PtrList>
+#include <QList>
 #include <QTableView>
 #include <QTextBrowser>
 #include <Q3ValueList>
